SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Ocean_File_Type__c</fullName>
        <label>Ocean File Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocean_Request_Id__c</fullName>
        <label>Ocean Request Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ocean_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ocean_Request</label>
        <referenceTo>Ocean_Request__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAVI_File_Scan_Status__c</fullName>
        <label>SAVI File Scan Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAVI_Scan_Date__c</fullName>
        <label>SAVI Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAVI_Scan_Status_Log__c</fullName>
        <label>SAVI Scan Status Log</label>
        <type>TextArea</type>
    </fields>
</CustomObject>